Changed grid size and fixed wrap on first two gird squares

--- a/stlyes.css
+++ b/stlyes.css
@@ -63,7 +63,7 @@ body{
 }
 
 .portfolio-img-background {
-    height: 400px;
+    height: 250px;
     width: 100%;
     background-size: cover;
     background-position: center;
